# backend

./: docker-compose.yml  pyproject.toml
migrations/: 001_create_table_piloto_and_enums.sql  002_create_table_endereco_and_enums.sql  003_create_table_carro.sql  004_adiciona_termo_de_adesao.sql  005_create_table_usuario_and_enum_tipo_usuario.sql  env.py
utv_legal/: app.py  database.py
utv_legal/auth/: dependencies.py
utv_legal/core/: admin_setup.py  security.py
utv_legal/dependencies/: auth.py
utv_legal/models/: __init__.py  base.py  carro.py  endereco.py  enums.py  piloto.py  usuario.py
utv_legal/routes/: __init__.py  auth.py  carro.py  endereco.py  piloto.py  usuario.py
utv_legal/schemas/: __init__.py  base.py  carro.py  endereco.py  piloto.py  usuario.py
